[update] 优化